--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,16 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@pbe/react-yandex-maps": "^1.2.5",
     "@react-pdf-viewer/core": "^3.12.0",
+    "@svgdotjs/svg.js": "^3.2.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "axios": "^1.6.7",
     "browser-image-compression": "^2.0.2",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.7",
@@ -19,6 +24,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-easy-crop": "^5.1.0",
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.26.0",
