--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "mobx-react-lite": "^4.0.7",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.3.1",
+    "react-colorful": "^5.6.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
